# N-Body-Simulator

./: .gitignore  CMakeLists.txt  README.md  config.h.in
src/: Constant.hpp  Core.cpp  Core.hpp  Main.cpp  Utils.hpp
src/Celestial/: Body.cpp  Body.hpp  Boundary.cpp  Boundary.hpp  Sim.cpp  Sim.hpp
src/GFX/: Effect.cpp  Effect.hpp  Explosion.cpp  Explosion.hpp  Light.cpp  Light.hpp  Trail.cpp  Trail.hpp
